part4/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exercise-ing
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /logger
            pathType: Prefix
            backend:
              service:
                name: logger-svc
                port:
                  number: 2345
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pong-svc
                port:
                  number: 2350
